# docs/swagger.yaml
@@ -256,6 +256,40 @@ paths:
       summary: Update Book
       tags:
       - book
+  /file:
+    post:
+      consumes:
+      - multipart/form-data
+      description: create file
+      parameters:
+      - description: file
+        in: formData
+        name: file
+        required: true
+        type: file
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Create File
+      tags:
+      - file
   /token:
     post:
       consumes:
